# survellience

./: .gitignore  .last_alert  Cargo.toml  DEPLOYMENT_READINESS.md  INTEGRATION_SUMMARY.md  KALSHI_INTEGRATION.md  MONITORING.md  MONITORING_SUMMARY.md  MONITOR_PARQUET.md  PARQUET_FILE_FORMAT.md  PROCESS_LIFECYCLE.md  PRODUCTION_QUICKSTART.md  PROJECT_STATUS.md  README.md  SEQUENCE_GAP_FIX.md  START_COLLECTION.md  STATUS.md  WEBSOCKET_MONITORING.md  create_source_files.sh  dashboard.py  dashboard.sh  dashboard_web.py  health_check.sh  monitor.sh  monitor_collector.sh  requirements.txt  run_miner.sh  run_mm_viability.sh  run_scanner.sh  summarize.sh  tail_log.sh
.cargo/: config.toml
bins/: surveillance_collect.rs  surveillance_miner.rs  surveillance_rules.rs  surveillance_scanner.rs
config/: rules.toml  surveillance.toml
docs/: DESIGN.md  MM_VIABILITY_ANALYSIS.md  MONITORING.md  MONITORING_AND_ALERTING.md  MONITORING_SUMMARY.md  MONITOR_PARQUET.md  POLYMARKET_INTEGRATION.md  POLYMARKET_WEBSOCKET_FORMAT.md  PROJECT_STATUS.md  QUICKSTART.md  START_COLLECTION.md
scripts/: DASHBOARD.md  PYTHON_SETUP.md  check_constraints.py  dashboard.py  (+33 more)
services/surveillance/: Cargo.toml
services/surveillance/src/: config.rs  lib.rs  schema.rs  timebucket.rs
services/surveillance/src/analytics/: miner.rs  mm_viability.rs  mod.rs
services/surveillance/src/collector/: book.rs  collector.rs  metrics.rs  mod.rs  snapshotter.rs  subscriptions.rs
services/surveillance/src/rules/: arb_detector.rs  confidence.rs  constraints.rs  extract.rs  ingest.rs  mod.rs  normalize.rs  outputs.rs  proposition.rs  review_queue.rs
services/surveillance/src/scanner/: scanner.rs
services/surveillance/src/scheduler/: mod.rs  scheduler.rs  scoring.rs
services/surveillance/src/storage/: mod.rs  parquet_writer.rs
services/surveillance/src/venue/: kalshi.rs  mock.rs  mod.rs  polymarket.rs  traits.rs
