[workspace]
members = ["services/surveillance"]
resolver = "2"

[workspace.dependencies]
anyhow = "1.0"
tokio = { version = "1.35", features = ["full"] }
tokio-tungstenite = { version = "0.21", default-features = false, features = ["native-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
arrow2 = "0.17"
parquet2 = "0.17"
polars = { version = "0.40", features = ["lazy", "parquet", "temporal", "streaming"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1.0"
futures = "0.3"
clap = { version = "4.5", features = ["derive"] }